@@ -112,10 +112,13 @@ else: _havedate = True
 #else: _have_pkg_resources = True
 
 if not _python23:
-    def enumerate(seq):
-        for i in range(len(seq)):
-            yield i, seq[i]
+    raise SystemExit('matplotlib requires Python 2.3 or later')
 
+import numpy
+nn = numpy.__version__.split('.')
+if not (int(nn[0]) >= 1 and int(nn[1]) >= 1):
+    raise SystemExit(
+            'numpy >= 1.1 is required; you have %s' % numpy.__version__)
 
 def is_string_like(obj):
     if hasattr(obj, 'shape'): return 0
